--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "tailwindcss": "3.3.2",
