--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "csv-parse": "^5.3.10",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "lodash": "^4.17.21",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -26,5 +27,8 @@
     "react-redux": "^8.0.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.194"
   }
 }
